--- a/format/spec.yml
+++ b/format/spec.yml
@@ -29,6 +29,8 @@
       doc: sort-question
     - title: Open question
       doc: open-question
+    - title: Selection question
+      doc: selection-question
 
 - title: Answers
   doc: answer
